--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,14 +6,20 @@
 </view>
 <view class="search-background">
   <view class="search-container">
-    <view class="logo">
-    </view>
+    <view class="logo"></view>
+    <view style="width: 500rpx;height: 50rpx;">
     <input 
       type="text" 
       placeholder="Type here to search" 
       bindinput="onInput" 
       bindconfirm="onConfirm"
     />
+    </view>
+    <view style="display: flex; justify-content:flex-end;width:120rpx;">
+      <view>
+        <button class="search-button" bindtap="onSearchButtonClick" hover-class="active-button" style="width: 120rpx;">搜索</button>
+      </view>
+    </view>
   </view>
 </view>
 <view class="fillwidth">
