--- a/miniprogram/pages/search/search.wxml
+++ b/miniprogram/pages/search/search.wxml
@@ -1,4 +1,5 @@
 <!--pages/search/search.wxml-->
+<block  wx:if="{{booklist.length  > 0 }}">
 <wxs module="util" src="../util.wxs"/>
 <scroll-view scroll-y="true" scroll-into-view="{{scrollLast}}" scroll-with-animation="true" class="hot-books">
     <view wx:for="{{booklist}}">
@@ -27,5 +28,8 @@
             </view>
         </view>
     </view>
-
 </scroll-view>
+</block>
+<block  wx:else >
+.....什么也没有
+</block>
