--- a/miniprogram/pages/add/index.wxml
+++ b/miniprogram/pages/add/index.wxml
@@ -37,7 +37,7 @@
     </view>
   </view>
   <view class="footer">
-    <view class="reset" bindtap="resetTodo">重置</view>
-    <view class="save" bindtap="saveTodo">保存</view>
+    <view class="reset" bindtap="resetbook">重置</view>
+    <view class="save" bindtap="savebook">保存</view>
   </view>
 </view>
