--- a/miniprogram/pages/detail/index.wxml
+++ b/miniprogram/pages/detail/index.wxml
@@ -1,8 +1,8 @@
 <view class="container">
   <view class="form-group">
     <view class="form-cell">
-      <view class="form-cell_title">{{todo.title}}</view>
-      <view class="form-cell_desc">{{todo.desc}}</view>
+      <view class="form-cell_title">{{book.title}}</view>
+      <view class="form-cell_desc">{{book.desc}}</view>
     </view>
   </view>
   <view class="footer">
