--- a/miniprogram/pages/list/index.wxml
+++ b/miniprogram/pages/list/index.wxml
@@ -1,12 +1,12 @@
 <wxs module="util" src="../util.wxs" />
-  <view class="container empty" wx:if="{{todos.length === 0}}">
+  <view class="container empty" wx:if="{{books.length === 0}}">
   <image class="background" src="../../images/list/background.png" mode="aspectFit" />
   <view class="title">库存为空</view>
   <view class="subtitle">有可能出售的教材？赶紧放入库存吧！</view>
   <footer></footer>
 </view>
 
-<view class="container" wx:if="{{todos.length > 0}}">
+<view class="container" wx:if="{{books.length > 0}}">
   <view class="form-group_label">
     未上架
     <mp-badge content="{{pending.length}}" style="margin-left: 5px;" />
@@ -15,10 +15,10 @@
     <view class="form-cell" wx:for="{{pending}}" wx:key="index">
       <mp-slideview buttons="{{slideButtons}}" data-index='{{index}}' bindbuttontap="slideButtonTap">
         <view class="slide" data-index="{{index}}" bindtap="toDetailPage">
-          <image class="checkbox" data-index='{{index}}' src="../../images/list/pending.png" catchtap="finishTodo"/>
-          <view class="todo-info">
-            <view class="todo-info_title">{{util.filterStr(item.title, 10)}}</view>
-            <view class="todo-info_desc">{{util.filterStr(item.desc, 10)}}</view>
+          <image class="checkbox" data-index='{{index}}' src="../../images/list/pending.png" catchtap="finishbook"/>
+          <view class="book-info">
+            <view class="book-info_title">{{util.filterStr(item.title, 10)}}</view>
+            <view class="book-info_desc">{{util.filterStr(item.desc, 10)}}</view>
           </view>
           <image wx:if="{{item.star}}" class="star" src="../../images/file/star.png" />
           <image wx:if="{{item.files.length > 0}}" data-index='{{index}}' class="file" src="../../images/file/file.png" catchtap="toFileList" />
@@ -34,10 +34,10 @@
     <view class="form-cell" wx:for="{{finished}}" wx:key="index">
       <mp-slideview buttons="{{[]}}" data-index='{{index}}' bindbuttontap="slideButtonTap">
         <view class="slide">
-          <image class="checkbox" data-index='{{index}}' src="../../images/list/finished.png" bindtap="resetTodo"/>
-          <view class="todo-info">
-            <view class="todo-info_title">{{util.filterStr(item.title, 10)}}</view>
-            <view class="todo-info_desc">{{util.filterStr(item.desc, 10)}}</view>
+          <image class="checkbox" data-index='{{index}}' src="../../images/list/finished.png" bindtap="resetbook"/>
+          <view class="book-info">
+            <view class="book-info_title">{{util.filterStr(item.title, 10)}}</view>
+            <view class="book-info_desc">{{util.filterStr(item.desc, 10)}}</view>
           </view>
         </view>
       </mp-slideview>
