--- a/miniprogram/pages/search/search.wxml
+++ b/miniprogram/pages/search/search.wxml
@@ -1,35 +1,35 @@
 <!--pages/search/search.wxml-->
-<block  wx:if="{{booklist.length  > 0 }}">
-<wxs module="util" src="../util.wxs"/>
-<scroll-view scroll-y="true" scroll-into-view="{{scrollLast}}" scroll-with-animation="true" class="hot-books">
-    <view wx:for="{{booklist}}">
-        <view class="hot-books" bindtap="ondetail" data-id="{{item._id}}">
-            <view class="books-block">
-                <!-- 书籍 -->
-                <view class="book">
-                    <view class="bookimage">
-                        <image src="{{item.files}}">
-                        </image>
-                    </view>
-                    <view class="bookinfo">
-                        <view style="font-size:35rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
-                            <text class="clickable-text" bindtap="onBookNameTap">{{item.title}}</text>
+<block wx:if="{{booklist.length  > 0 }}">
+    <wxs module="util" src="../util.wxs" />
+    <scroll-view scroll-y="true" scroll-into-view="{{scrollLast}}" scroll-with-animation="true" class="hot-books">
+        <view wx:for="{{booklist}}">
+            <view class="hot-books" bindtap="ondetail" data-id="{{item._id}}">
+                <view class="books-block">
+                    <!-- 书籍 -->
+                    <view class="book">
+                        <view class="bookimage">
+                            <image src="{{item.files[0].id}}">
+                            </image>
                         </view>
-                        <view style="font-size:30rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
-                            <text>{{util.filterStr(item.desc,30)}}</text>
+                        <view class="bookinfo">
+                            <view style="font-size:35rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
+                                <text class="clickable-text" bindtap="onBookNameTap">{{item.title}}</text>
+                            </view>
+                            <view style="font-size:30rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
+                                <text>{{util.filterStr(item.desc,30)}}</text>
+                            </view>
                         </view>
+                        <!-- 其他信息 -->
                     </view>
-                    <!-- 其他信息 -->
-                </view>
 
-                <view style="display:flex;height:20rpx;justify-content:center;align-items:center;">
-                    <view style="background-color: gray;height:5rpx;width:100%;"></view>
+                    <view style="display:flex;height:20rpx;justify-content:center;align-items:center;">
+                        <view style="background-color: gray;height:5rpx;width:100%;"></view>
+                    </view>
                 </view>
             </view>
         </view>
-    </view>
-</scroll-view>
+    </scroll-view>
 </block>
-<block  wx:else >
-.....什么也没有
+<block wx:else>
+    .....什么也没有
 </block>
