--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,4 +1,14 @@
 /* pages/index/index.wxss */
+
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
 .fillwidth {
   display: flex;
   height:180rpx;
@@ -12,6 +22,10 @@
   justify-content: center;
   /*align-items: center;*/
   font-size:  50rpx;
+  color: rgb(51, 255, 228);
+  font-weight: bold;
+  text-shadow: 5rpx 5rpx 5rpx rgb(0, 0, 0); /* 添加阴影效果 */
+
 }
 .search-background {
   display: flex;
@@ -91,6 +105,6 @@ image {
 
 .clickable-text {
   color: blue; /* 设置文本颜色为蓝色 */
-  text-decoration: underline; /* 添加下划线效果 */
+  text-decoration: underline; /*添加下划线效果*/
   cursor: pointer; /* 鼠标悬停时显示手型光标，增加可点击感知 */
 }
