--- a/miniprogram/pages/search/search.wxml
+++ b/miniprogram/pages/search/search.wxml
@@ -1,4 +1,7 @@
 <!--pages/search/search.wxml-->
+<image src="/images/background/search.jpg" class="background-image"></image>
+
+
 <block  wx:if="{{booklist.length  > 0 }}">
 <wxs module="util" src="../util.wxs"/>
 <scroll-view scroll-y="true" scroll-into-view="{{scrollLast}}" scroll-with-animation="true" class="hot-books">
