--- a/miniprogram/pages/search/search.wxml
+++ b/miniprogram/pages/search/search.wxml
@@ -15,7 +15,7 @@
                         </image>
                     </view>
                         <view class="bookinfo">
-                            <view style="font-size:35rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
+                            <view style="font-size:40rpx;text-indent:20rpx;height:55rpx;width:450rpx;text-align:left;font-weight:bold;">
                                 <text class="clickable-text" bindtap="onBookNameTap">{{item.title}}</text>
                             </view>
                             <view style="font-size:30rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
