--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -20,6 +20,34 @@
         </view>
     </view>
 </view>
+
+<view class="fillwidth">
+    <text class="headFont">
+        热门书籍
+    </text>
+</view>
+<view style="display: flex;justify-content:flex-end;text-align:center;align-items:center;">
+  <view><button class="change-button" bindtap="onChange">换一换</button></view>
+</view>
+<view style="height:20rpx;"></view>
+<view style="width:750rpx;height:200rpx;justify-content:center;display:flex;">
+  <view class="hot-book" bindtap="ondetail" data-id="{{hotBook_id}}" >
+    <view class="bookimage">
+      <image src="{{hotBookPicture}}"></image>
+    </view>
+    <view class="bookinfo">
+      <view style="font-size:40rpx;text-indent:20rpx;height:55rpx;width:450rpx;text-align:left;font-weight:bold;">
+        <text class="clickable-text">{{hotBookTitle}}</text>
+      </view>
+      <view style="font-size:30rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
+        <text>地址 : {{hotBookAddress}}</text>
+      </view>
+      <view style="font-size:30rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
+        <text>售价 : {{hotBookPrice}}元</text>
+      </view>
+    </view>
+  </view>
+</view>
 <!-- <view class="fillwidth">
     <text class="headFont">
         本日热门
