--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -67,20 +67,28 @@ input {
 .active-button {
   background-color: #8b8b8b; /* 按钮被点击时的背景颜色 */
 }
-.hot-books {
-  display: flex;
-  height:400rpx;
-  width:750rpx;
-  justify-content: center;
-}
-.books-block{
+.hot-book {
+  display:flex;
   width: 600rpx; /* 可根据需要设置宽度 */
-  height: 490rpx; /* 可根据需要设置高度 */
-  background-color: #fff; /* 设置背景颜色，可根据需要调整 */
+  /* height: 490rpx; 可根据需要设置高度 */
+  background-color: rgba(255, 255, 255,0.4); /* 设置背景颜色，可根据需要调整 */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* 添加一个阴影效果，可根据需要调整颜色和模糊程度 */
   padding: 10px; /* 可根据需要设置内边距 */
   text-align: center; /* 文本居中显示 */
   /* 其他样式，如文本颜色等，可以根据需要自定义 */
+  justify-content: center;
+}
+.books-block{
+    display:flex;
+    width: 750rpx; /* 可根据需要设置宽度 */
+    /* height: 490rpx; 可根据需要设置高度 */
+    background-color: rgba(255, 255, 255,0.4); /* 设置背景颜色，可根据需要调整 */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* 添加一个阴影效果，可根据需要调整颜色和模糊程度 */
+    padding: 10px; /* 可根据需要设置内边距 */
+    text-align: center; /* 文本居中显示 */
+    /* 其他样式，如文本颜色等，可以根据需要自定义 */
+    justify-content: center;
+
 }
 
 .book {
@@ -107,4 +115,18 @@ image {
   color: blue; /* 设置文本颜色为蓝色 */
   text-decoration: underline; /*添加下划线效果*/
   cursor: pointer; /* 鼠标悬停时显示手型光标，增加可点击感知 */
+}
+
+.change-button {
+  color: #0bf332; /* 文字颜色 */
+  font-weight:bold;
+  text-shadow: 5rpx 5rpx 5rpx rgb(0, 0, 0); /* 添加阴影效果 */
+  font-size: 30rpx; /* 字体大小 */
+  padding: 5rpx 10rpx; /* 内边距 */
+  border: none; /* 去掉边框 */
+}
+
+.change-button:active {
+  background-color: rgba(255, 255, 255,0.1); /* 按钮被点击时的背景颜色 */
+  color: #fff; /* 按钮被点击时的文本颜色 */
 }
