--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -11,27 +11,26 @@
 
 .fillwidth {
   display: flex;
-  height:180rpx;
-  width:  750rpx;
+  height: 180rpx;
+  width: 750rpx;
 }
 .headFont {
-  display:  flex;
-  width:750rpx;
+  display: flex;
+  width: 750rpx;
   height: 0rpx;
   text-align: center;
   justify-content: center;
   /*align-items: center;*/
-  font-size:  50rpx;
+  font-size: 50rpx;
   color: rgb(51, 255, 228);
   font-weight: bold;
   text-shadow: 5rpx 5rpx 5rpx rgb(0, 0, 0); /* 添加阴影效果 */
-
 }
 .search-background {
   display: flex;
-  height:200rpx; /* 可以设置容器的高度以确定垂直居中的效果 */
-  width:750rpx;
-  
+  height: 200rpx; /* 可以设置容器的高度以确定垂直居中的效果 */
+  width: 750rpx;
+
   justify-content: center;
   /*align-items: center; /* 这将使内容垂直居中 */
 }
@@ -58,8 +57,8 @@ input {
   color: #fff;
 }
 .search-button {
-  background-color:rgb(71, 69, 69); /* 设置按钮的背景颜色 */
-  color:white; /* 设置按钮文字颜色 */
+  background-color: rgb(71, 69, 69); /* 设置按钮的背景颜色 */
+  color: white; /* 设置按钮文字颜色 */
   border: none; /* 去除按钮边框 */
   padding: 10rpx 10rpx; /* 设置按钮内边距 */
   border-radius: 10rpx; /* 设置按钮圆角 */
@@ -68,32 +67,31 @@ input {
   background-color: #8b8b8b; /* 按钮被点击时的背景颜色 */
 }
 .hot-book {
-  display:flex;
+  display: flex;
   width: 600rpx; /* 可根据需要设置宽度 */
   /* height: 490rpx; 可根据需要设置高度 */
-  background-color: rgba(255, 255, 255,0.4); /* 设置背景颜色，可根据需要调整 */
+  background-color: rgba(255, 255, 255, 0.4); /* 设置背景颜色，可根据需要调整 */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* 添加一个阴影效果，可根据需要调整颜色和模糊程度 */
   padding: 10px; /* 可根据需要设置内边距 */
   text-align: center; /* 文本居中显示 */
   /* 其他样式，如文本颜色等，可以根据需要自定义 */
   justify-content: center;
 }
-.books-block{
-    display:flex;
-    width: 750rpx; /* 可根据需要设置宽度 */
-    /* height: 490rpx; 可根据需要设置高度 */
-    background-color: rgba(255, 255, 255,0.4); /* 设置背景颜色，可根据需要调整 */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* 添加一个阴影效果，可根据需要调整颜色和模糊程度 */
-    padding: 10px; /* 可根据需要设置内边距 */
-    text-align: center; /* 文本居中显示 */
-    /* 其他样式，如文本颜色等，可以根据需要自定义 */
-    justify-content: center;
-
+.books-block {
+  display: flex;
+  width: 750rpx; /* 可根据需要设置宽度 */
+  /* height: 490rpx; 可根据需要设置高度 */
+  background-color: rgba(255, 255, 255, 0.4); /* 设置背景颜色，可根据需要调整 */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* 添加一个阴影效果，可根据需要调整颜色和模糊程度 */
+  padding: 10px; /* 可根据需要设置内边距 */
+  text-align: center; /* 文本居中显示 */
+  /* 其他样式，如文本颜色等，可以根据需要自定义 */
+  justify-content: center;
 }
 
 .book {
   display: flex;
-  height:150rpx;
+  height: 150rpx;
   width: 600rpx;
   /* 可以根据需要设置内边距、边框、样式等 */
 }
@@ -102,13 +100,13 @@ image {
   height: 150rpx;
 }
 .bookimage {
-  height:150rpx;
-  width:130rpx;
+  height: 150rpx;
+  width: 130rpx;
 }
 .bookinfo {
-  display:block;
-  height:150rpx;
-  width:450rpx;
+  display: block;
+  height: 150rpx;
+  width: 450rpx;
 }
 
 .clickable-text {
@@ -119,7 +117,7 @@ image {
 
 .change-button {
   color: #0bf332; /* 文字颜色 */
-  font-weight:bold;
+  font-weight: bold;
   text-shadow: 5rpx 5rpx 5rpx rgb(0, 0, 0); /* 添加阴影效果 */
   font-size: 30rpx; /* 字体大小 */
   padding: 5rpx 10rpx; /* 内边距 */
@@ -127,6 +125,6 @@ image {
 }
 
 .change-button:active {
-  background-color: rgba(255, 255, 255,0.1); /* 按钮被点击时的背景颜色 */
+  background-color: rgba(255, 255, 255, 0.1); /* 按钮被点击时的背景颜色 */
   color: #fff; /* 按钮被点击时的文本颜色 */
 }
