--- a/miniprogram/pages/search/search.wxss
+++ b/miniprogram/pages/search/search.wxss
@@ -1,6 +1,5 @@
 /* pages/search/search.wxss */
 
-
 .background-image {
   position: fixed;
   top: 0;
@@ -9,7 +8,6 @@
   height: 100%;
   z-index: -1;
 }
-
 
 .hot-books {
   display: flex;
@@ -50,43 +48,40 @@ image {
   width: 450rpx;
 }
 
+.books-block {
+  display: flex;
+  width: 750rpx; /* 可根据需要设置宽度 */
+  /* height: 490rpx; 可根据需要设置高度 */
+  background-color: rgba(255, 255, 255, 0.4); /* 设置背景颜色，可根据需要调整 */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* 添加一个阴影效果，可根据需要调整颜色和模糊程度 */
+  padding: 10px; /* 可根据需要设置内边距 */
+  text-align: center; /* 文本居中显示 */
+  /* 其他样式，如文本颜色等，可以根据需要自定义 */
+  justify-content: center;
+}
 
-.books-block{
-    display:flex;
-    width: 750rpx; /* 可根据需要设置宽度 */
-    /* height: 490rpx; 可根据需要设置高度 */
-    background-color: rgba(255, 255, 255,0.4); /* 设置背景颜色，可根据需要调整 */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* 添加一个阴影效果，可根据需要调整颜色和模糊程度 */
-    padding: 10px; /* 可根据需要设置内边距 */
-    text-align: center; /* 文本居中显示 */
-    /* 其他样式，如文本颜色等，可以根据需要自定义 */
-    justify-content: center;
-  }
-  
-  .book {
-    display: flex;
-    height:150rpx;
-    width: 600rpx;
-    /* 可以根据需要设置内边距、边框、样式等 */
-  }
-  image {
-    width: 130rpx;
-    height: 150rpx;
-  }
-  .bookimage {
-    height:150rpx;
-    width:130rpx;
-  }
-  .bookinfo {
-    display:block;
-    height:150rpx;
-    width:450rpx;
-  }
-  
-  .clickable-text {
-    color: rgb(14, 14, 236); /* 设置文本颜色为蓝色 */
-    text-decoration: underline; /* 添加下划线效果 */
-    cursor: pointer; /* 鼠标悬停时显示手型光标，增加可点击感知 */
-  }
-  
+.book {
+  display: flex;
+  height: 150rpx;
+  width: 600rpx;
+  /* 可以根据需要设置内边距、边框、样式等 */
+}
+image {
+  width: 130rpx;
+  height: 150rpx;
+}
+.bookimage {
+  height: 150rpx;
+  width: 130rpx;
+}
+.bookinfo {
+  display: block;
+  height: 150rpx;
+  width: 450rpx;
+}
 
+.clickable-text {
+  color: rgb(14, 14, 236); /* 设置文本颜色为蓝色 */
+  text-decoration: underline; /* 添加下划线效果 */
+  cursor: pointer; /* 鼠标悬停时显示手型光标，增加可点击感知 */
+}
