--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -26,6 +26,9 @@
         热门书籍
     </text>
 </view>
+
+<block  wx:if="{{curidx == 2 }}">
+
 <view style="display: flex;justify-content:flex-end;text-align:center;align-items:center;">
   <view><button class="change-button" bindtap="onChange">换一换</button></view>
 </view>
@@ -33,21 +36,63 @@
 <view style="width:750rpx;height:200rpx;justify-content:center;display:flex;">
   <view class="hot-book" bindtap="ondetail" data-id="{{hotBook_id}}" >
     <view class="bookimage">
-      <image src="{{hotBookPicture}}"></image>
+      <image src="{{picture[0]}}"></image>
     </view>
     <view class="bookinfo">
       <view style="font-size:40rpx;text-indent:20rpx;height:55rpx;width:450rpx;text-align:left;font-weight:bold;">
-        <text class="clickable-text">{{hotBookTitle}}</text>
+        <text class="clickable-text">{{title[0]}}</text>
       </view>
       <view style="font-size:30rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
-        <text>地址 : {{hotBookAddress}}</text>
+        <text>地址 : {{address[0]}}</text>
       </view>
       <view style="font-size:30rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
-        <text>售价 : {{hotBookPrice}}元</text>
+        <text>售价 : {{price[0]}}元</text>
       </view>
     </view>
   </view>
 </view>
+
+<view style="height:20rpx;"></view>
+<view style="width:750rpx;height:200rpx;justify-content:center;display:flex;">
+  <view class="hot-book" bindtap="ondetail" data-id="{{hotBook_id}}" >
+    <view class="bookimage">
+      <image src="{{picture[1]}}"></image>
+    </view>
+    <view class="bookinfo">
+      <view style="font-size:40rpx;text-indent:20rpx;height:55rpx;width:450rpx;text-align:left;font-weight:bold;">
+        <text class="clickable-text">{{title[1]}}</text>
+      </view>
+      <view style="font-size:30rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
+        <text>地址 : {{address[1]}}</text>
+      </view>
+      <view style="font-size:30rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
+        <text>售价 : {{price[1]}}元</text>
+      </view>
+    </view>
+  </view>
+</view>
+
+<view style="height:20rpx;"></view>
+<view style="width:750rpx;height:200rpx;justify-content:center;display:flex;">
+  <view class="hot-book" bindtap="ondetail" data-id="{{hotBook_id}}" >
+    <view class="bookimage">
+      <image src="{{picture[2]}}"></image>
+    </view>
+    <view class="bookinfo">
+      <view style="font-size:40rpx;text-indent:20rpx;height:55rpx;width:450rpx;text-align:left;font-weight:bold;">
+        <text class="clickable-text">{{title[2]}}</text>
+      </view>
+      <view style="font-size:30rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
+        <text>地址 : {{address[2]}}</text>
+      </view>
+      <view style="font-size:30rpx;text-indent:20rpx;height:45rpx;width:450rpx;text-align:left;">
+        <text>售价 : {{price[2]}}元</text>
+      </view>
+    </view>
+  </view>
+</view>
+
+</block>
 <!-- <view class="fillwidth">
     <text class="headFont">
         本日热门
